# HuggingFace-Tests

./: .env.template  Makefile  README.md  pyproject.toml
src/huggingface_tests/: main.py
